--- a/Q/Styles.css
+++ b/Q/Styles.css
@@ -9,13 +9,13 @@ table.qjs-circuit {
 	align-items: center;
 	font-family: 'Source Code Pro', Menlo, "Courier New", monospace;
 	font-weight: 300;
-	color: rgba( 0, 0, 0, 0.2 );
+	color: rgba( 0, 0, 0, 0.1 );
 }
 .qjs-circuit td {
 
 	position: relative;
 	min-width: 3.5em;
-	padding: 0.6em;
+	padding: 0.6em 0.8em;
 	text-align: center;
 }
 .qjs-circuit td:nth-child( even ){
@@ -24,7 +24,8 @@ table.qjs-circuit {
 }
 .qjs-circuit td:hover {
 
-	background-color: #FD0;
+	/*background-color: #FD0;*/
+	background-color: transparent;
 }
 
 
@@ -59,15 +60,6 @@ td.qjs-null-cell:hover {
 }
 
 
-
-.qjs-highlighted {
-
-	background-color: #FD0;
-}
-.qjs-highlighted .qjs-wire {
-
-	background-color: rgba( 0, 0, 0, 0.8 );
-}
 .qjs-input {
 
 	color: #000;
@@ -80,7 +72,8 @@ td.qjs-null-cell:hover {
 
 	position: absolute;
 	left: 0;
-	top: calc( 50% - 1px );
+	/*top: calc( 50% - 0.5px );*/
+	top: 50%;
 	width: 100%;
 	height: 1px;
 	background-color: rgba( 0, 0, 0, 0.1 );
@@ -95,8 +88,8 @@ td.qjs-null-cell:hover {
 	box-sizing: border-box;
 	position: relative;
 	cursor: move;
-	border: 1px solid rgba( 0, 0, 0, 0.4 );
-	padding: 0.4em 0.8em;
+	border: 1px solid rgba( 0, 0, 0, 0.2 );
+	padding: 0.2em 0.6em;
 	background-color: #FFF;
 	text-align: center;
 	color: #000;
@@ -120,12 +113,12 @@ td.qjs-null-cell:hover {
 .qjs-operation-control {
 
 	margin: auto;
-	width:  0.6em;
-	height: 0.6em;
+	width:  0.8em;
+	height: 0.8em;
 	border: none;
 	border-radius: 100%;
-	background-color: rgba( 0, 0, 0, 0.4 );
-	background-color: #000;
+	background-color: rgba( 0, 0, 0, 0.6 );
+	/*background-color: #000;*/
 	padding: 0;
 	color: transparent;
 	overflow: hidden;
@@ -141,6 +134,26 @@ td.qjs-null-cell:hover {
 	color: transparent;
 	overflow: hidden;
 }
+
+
+
+
+
+.qjs-highlighted {
+
+	/*background-color: #FD0;*/
+	color: #000;
+}
+.qjs-highlighted .qjs-wire {
+
+	background-color: rgba( 0, 0, 0, 0.6 );
+}
+.qjs-highlighted .qjs-operation {
+
+	border: 1px solid rgba( 0, 0, 0, 0.8 );
+}
+
+
 
 
 
